[gd_scene load_steps=5 format=3 uid="uid://el1ywym68otq"]

[ext_resource type="Script" uid="uid://dpfhxkdfjm6rd" path="res://scripts/PlayerShip.gd" id="1_iig01"]
[ext_resource type="Texture2D" uid="uid://d7c0mwuodxu1" path="res://sprites/ships/temp_ship01.png" id="2_hkka0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hkka0"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a884r"]
radius = 100.02

[node name="PlayerShip" type="RigidBody2D"]
gravity_scale = 0.0
linear_damp = 0.1
angular_damp = 1.0
script = ExtResource("1_iig01")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.56703
texture = ExtResource("2_hkka0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hkka0")

[node name="EngineParticles" type="CPUParticles2D" parent="."]
position = Vector2(-15, 0)
emitting = false
amount = 50
direction = Vector2(0, 1)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
scale_amount_min = 0.5
scale_amount_max = 0.5

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_a884r")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true
